tutorial/circuit-breaker/destination-rule-recomm-traffic-policy.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: recommendation
    namespace: tutorial
spec:
    host: recommendation
    subsets:
        - name: version-v1
          labels:
            version: v1
        - name: version-v4
          labels:
            version: v4
          trafficPolicy:
            connectionPool:
              http:
                http1MaxPendingRequests: 1
                maxRequestsPerConnection: 1
              tcp:
                maxConnections: 1
            outlierDetection:
              baseEjectionTime: 120.000s
              consecutiveErrors: 1
              interval: 1.000s
              maxEjectionPercent: 100
