tutorial/circuit-breaker/destination-rule-recomm.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: recommendation
    namespace: tutorial
spec:
    host: recommendation
    subsets:
        - name: version-v1
          labels:
            version: v1
        - name: version-v4
          labels:
            version: v4
