tutorial/circuit-breaker/virtual-service-recommendation-retry.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
  namespace: tutorial
spec:
  hosts:
  - recommendation
  http:
  - retries:
      attempts: 3
      perTryTimeout: 4.000s
    route:
    - destination:
        host: recommendation
        subset: version-v4
      weight: 50
    - destination:
        host: recommendation
        subset: version-v1
      weight: 50
