tutorial/circuit-breaker/virtual-service-recommendation.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
  namespace: tutorial
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: version-v4
      weight: 100
    #  weight: 50
    #- destination:
    #    host: recommendation
    #    subset: version-v1
    #  weight: 50
